# wayfinder

./: .gitignore  .pre-commit-config.yaml  .pre-commit-install.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  deps.yml  docs.yml  release.yml
docs/: IMPLEMENTATION.md  PLAN.md
examples/: README.md  advanced-script-demo.yaml  complex-workflow.yaml  complex_workflow.yaml  mysql-backup.yaml  parallel_workflow.yaml  retry_workflow.yaml  script-example.yaml  simple_workflow.yaml  template-demo.yaml  template-test.yaml  test-decompress.yaml  test-invalid.yaml  test-with-templates.yaml  test-workflow.yaml
src/: lib.rs  main.rs
src/cli/: app.rs  args.rs  commands.rs  config.rs  mod.rs
src/engine/: context.rs  dependency.rs  error.rs  executor.rs  mod.rs  result.rs  scheduler.rs
src/output/: config.rs  error.rs  formatter.rs  mod.rs  writer.rs
src/parser/: error.rs  mod.rs  task.rs  validation.rs  workflow.rs
src/reporting/: config.rs  delivery.rs  error.rs  generator.rs  metrics.rs  mod.rs  templates.rs
src/tasks/: checksum.rs  command.rs  compress.rs  compression.rs  email.rs  mod.rs  s3.rs  slack.rs  template.rs
src/template/: context.rs  engine.rs  error.rs  helpers.rs  mod.rs
tests/: cli_tests.rs  engine_tests.rs  integration_tests.rs  parser_tests.rs  reporting_tests.rs
tests/common/: mod.rs
